--- a/markconsume.tex
+++ b/markconsume.tex
@@ -1005,6 +1005,9 @@ Revisions to this document are as follows:
 	(December 5, 2016.)
 \item	Move proposals not filled out to appendix.
 	(January 4, 2017.)
+\item	Move ``\co{_Carries_dependency}'' to after the ``*'' per
+	Hans Boehm feedback.
+	(January 4, 2017.)
 \end{itemize}
 
 % At this point, the paper was published as {\bf P0098R1}.
